add hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ a {
   font-size: 24px;
 }
 
+.hvr-grow {
+  display: list-item;
+}
+
 .header {
   padding: 12px 75px;
   background-color: #161D2F;
