--- a/css/style.css
+++ b/css/style.css
@@ -804,6 +804,57 @@ a {
   margin-top: 0;
 }
 
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #161D2F;
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 0.7;
+}
+
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  color: #fff;
+  padding: 30px 30px;
+  border-radius: 10px;
+  background: #161D2F;
+  z-index: 101;
+  max-width: 550px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  color: #fff;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+
+.modal__title {
+  font-size: 25px;
+  width: 320px;
+  margin: 0;
+}
+
 @media (max-width: 1200px) {
   .swiper_button__next {
     right: 0;
